editors/tree-sitter-abide/test/corpus/markup.txt
================================================================================
a module script, a setup script and a style block
================================================================================

<script module>
const a = { b: 1 }
</script>
<script>
import { props } from 'abide'
</script>
<style>
.a { color: red }
</style>

--------------------------------------------------------------------------------

(document
  (script_element
    (script_start_tag (tag_name) (attribute (attribute_name)))
    (raw_text)
    (script_end_tag (tag_name)))
  (script_element
    (script_start_tag (tag_name))
    (raw_text)
    (script_end_tag (tag_name)))
  (style_element
    (style_start_tag (tag_name))
    (raw_text)
    (style_end_tag (tag_name))))

================================================================================
a component, a void element and a self-closing tag
================================================================================

<Card title="a"><br><img src="x" /><slot /></Card>

--------------------------------------------------------------------------------

(document
  (component
    (component_start_tag
      (component_name)
      (attribute (attribute_name) (quoted_attribute_value (attribute_value))))
    (void_element (tag_name))
    (void_element
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value (attribute_value))))
    (self_closing_element (tag_name))
    (component_end_tag (component_name))))

================================================================================
the attribute forms
================================================================================

<input bind:value={name} class:on={active} style:width={w} onclick={go} type=text {...rest}>

--------------------------------------------------------------------------------

(document
  (void_element
    (tag_name)
    (attribute (attribute_name) (expression (expression_text)))
    (attribute (attribute_name) (expression (expression_text)))
    (attribute (attribute_name) (expression (expression_text)))
    (attribute (attribute_name) (expression (expression_text)))
    (attribute (attribute_name) (attribute_value))
    (spread_attribute (expression (expression_text)))))

================================================================================
an interpolated attribute value
================================================================================

<div class="row {item.done ? 'a' : 'b'} end">x</div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (expression (expression_text))
          (attribute_value))))
    (text)
    (end_tag (tag_name))))

================================================================================
an expression holding braces, a template literal and a comment
================================================================================

<p>{ format({ a: 1 }, `${n} of ${total}`) /* keep */ }</p>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (expression (expression_text))
    (end_tag (tag_name))))

================================================================================
a markup comment is a node
================================================================================

<!-- a {#for} written about, not opened -->
<p>x</p>

--------------------------------------------------------------------------------

(document
  (comment)
  (element (start_tag (tag_name)) (text) (end_tag (tag_name))))
